# learn-it

./: .env.example  .gitignore  README.md  docker-compose.yml  master.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py  schemas.py
apps/api/app/core/: config.py
apps/api/app/services/: ingestion_service.py  learning_loop.py  repository.py
apps/web/: Dockerfile  global.d.ts  next.config.mjs  package.json  tailwind.config.mjs  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: concept-graph.tsx  learning-path.tsx  metric-strip.tsx  source-list.tsx  source-upload.tsx
apps/web/src/lib/: api.ts  sample-dashboard.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: main.py
docs/: agent-rules.md  architecture.md  coding-rules.md  product-constitution.md
services/: README.md
