[project]
name = "learn-it-worker"
version = "0.1.0"
description = "Background worker for Learn It ingestion and retention jobs."
requires-python = ">=3.11"
dependencies = ["learn-it-agents", "learn-it-graph"]

[tool.uv.sources]
learn-it-agents = { path = "../../packages/agents", editable = true }
learn-it-graph = { path = "../../packages/graph", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
